Added bg to photo credit line and tinkering with the footer.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- This inspiration for this: https://websitedemos.net/heritage-hotel-04/ -->
 
     <section id="hero">
-        <p id="credit">Photo by <a href="https://unsplash.com/@editholic7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Kunal Shinde</a> on <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a>
+        <p id="credit"><span>Photo by <a href="https://unsplash.com/@editholic7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Kunal Shinde</a> on <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a></span>
         </p>
         <h1 id="herocopy">Helping Hands For All Creatures Great And Small</h1>
     </section>
@@ -57,8 +57,11 @@
 
             <p>Let's come together and love our neighbors the way GOD intended, by being the <strong>Helping Hands for All Creatures Great And Small!</strong></p>
         </section>
-
         <section class="content">
+            <hr>
+
+        </section>
+        <section class="content footer">
             <p id="legal">Copyright © 2021 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
         </section>
 
