Updates to fonts in css, and edits to html.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         <section class="card">
             <img id="logo" src="https://i.ibb.co/FnhcQnv/helping-hands-placeholder-sm.png" alt="">
             <p>
-                <!-- Be a part of something big! Donate and get involved. -->We are currently in the process of obtaining our 501(c)(3) status.
+                We are currently in the process of obtaining our 501(c)(3) status.
             </p>
-            <!-- <a class="btn" href="#" target="_blank" rel="noopener"><button ontouchend="this.onclick=fix">Contact</button></a> -->
         </section>
 
         <section class="content">
