Added mailto to both indexes.

--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@
 
             <p>But that's just the beginning. We will also raise funds for other nonprofits that are doing GOD's work. Specifically, nonprofits that are overlooked by public grants and other organizations.</p>
 
-            <p>If you're donating money, pray and ask GOD how much you should give. If you want to donate supplies, provide resources, and/or volunteer, please contact us at <a href="#">serve@helpinghandsforall.org</a>.</p>
+            <p>If you're donating money, pray and ask GOD how much you should give. If you want to donate supplies, provide resources, and/or volunteer, please contact us at <a href="mailto:serve@helpinghandsforall.org">serve@helpinghandsforall.org</a>.</p>
 
             <p>Let's come together and love our neighbors the way GOD intended, by being the <strong>Helping Hands for All Creatures Great And Small!</strong></p>
         </section>
