Beginnings of navbar and contact page design.

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,10 @@
 
 <body>
     <!-- This inspiration for this: https://websitedemos.net/heritage-hotel-04/ -->
-
+    <nav>
+        <a href="index.html">Home</a>
+        <!-- <a href="">contact</a> -->
+    </nav>
     <section id="hero2">
 
         <h1 id="herocopy">Contact Us</h1>
@@ -35,6 +38,7 @@
 
         <section class="content cform">
             <div class="container">
+                <p>We'd love to hear from you. You can either email us at the address below, or fill out the form and submit.</p>
                 <p><b>serve@helpinghandsforall.org</b></p>
                 <br><br>
                 <form action="https://usebasin.com/f/58759e3a33e0" method="post">
