--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     <!-- This inspiration for this: https://websitedemos.net/heritage-hotel-04/ -->
 
     <section id="hero">
-        <p id="credit"><span>Photo by <a href="https://unsplash.com/@editholic7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Kunal Shinde</a> on <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a></span>
-        </p>
         <h1 id="herocopy">Helping Hands For All Creatures Great And Small</h1>
     </section>
 
@@ -61,7 +59,9 @@
 
         </section>
         <section class="content footer">
-            <p id="legal">Copyright © 2021 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
+            <p class="legal">Copyright © 2021 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
+            <p class="legal"><span>Photo by <a href="https://unsplash.com/@editholic7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Kunal Shinde</a> on <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a></span>
+            </p>
         </section>
 
     </section>
