--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
         </section>
 
         <section class="content footer">
-            <p id="legal">Copyright © 2021 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
+            <p class="legal">Copyright © 2021 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
         </section>
 
     </section>
