Adding nav bar.

--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,12 @@
 
 <body>
     <!-- This inspiration for this: https://websitedemos.net/heritage-hotel-04/ -->
-    <nav>
-        <a href="index.html">Home</a>
-        <!-- <a href="">contact</a> -->
-    </nav>
-    <section id="hero2">
 
+    <section id="hero2">
+        <nav>
+            <section class="content"><a href="index.html">Home</a></section>
+            <!-- <a href="">contact</a> -->
+        </nav>
         <h1 id="herocopy">Contact Us</h1>
     </section>
 
