Editing links and styles.

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
     <section id="hero2">
         <nav>
-            <section class="content"><a href="index.html">Home</a></section>
+            <a href="index.html">Home</a>
             <!-- <a href="">contact</a> -->
         </nav>
         <h1 id="herocopy">Contact Us</h1>
