--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
         <section class="content footer">
             <p class="legal">Copyright © 2021 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
-            <p class="legal"><span>Photo by <a href="https://unsplash.com/@editholic7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Kunal Shinde</a> on <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a></span>
+            <p class="legal credit"><span>Photo by <a href="https://unsplash.com/@editholic7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Kunal Shinde</a> on <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a></span>
             </p>
         </section>
 
