Switched the home page design to include the 3 column card with the donate button and added the Basin url endpoint.

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
     <section id="hero2">
         <nav>
-            <a href="index.html">Home</a>
+            <a class="navlink" href="index.html">Home</a>
             <!-- <a href="">contact</a> -->
         </nav>
         <h1 id="herocopy">Contact Us</h1>
@@ -41,7 +41,7 @@
                 <p>We'd love to hear from you. You can either email us at the address below, or fill out the form and submit.</p>
                 <p><b>serve@helpinghandsforall.org</b></p>
                 <br><br>
-                <form action="https://usebasin.com/f/58759e3a33e0" method="post">
+                <form action="https://usebasin.com/f/b3cd3717e375" method="post">
 
                     <label for="fname">Full Name</label>
                     <input type="text" id="name" name="full_name" placeholder="Full Name">
