--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <section class="card">
             <img id="logo" src="https://i.ibb.co/FnhcQnv/helping-hands-placeholder-sm.png" alt="">
             <p>
-                We are currently in the process of obtaining our 501(c)(3) status.
+                Be a part of something big! Donate and get involved.
             </p>
+            <a class="btn" href="#" target="_blank" rel="noopener"><button ontouchend="this.onclick=fix">Donate</button></a>
         </section>
 
         <section class="content">
@@ -56,7 +57,8 @@
         </section>
         <section class="content">
             <hr>
-
+            <p class="message">We are currently in the process of obtaining our 501(c)(3) status.</p>
+            <hr>
         </section>
         <section class="content footer">
             <p class="legal">Copyright © 2021 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
