--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 
         <section class="card">
             <img id="logo" src="https://i.ibb.co/FnhcQnv/helping-hands-placeholder-sm.png" alt="">
-            <p>
-                Be a part of something big! Donate and get involved.
-            </p>
+            <p>Be a part of something big! Donate and get involved.</p>
             <a class="btn" href="#" target="_blank" rel="noopener"><button ontouchend="this.onclick=fix">Donate</button></a>
         </section>
 
