Added some styling to nav.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <!-- This inspiration for this: https://websitedemos.net/heritage-hotel-04/ -->
 
     <section id="hero">
+        <nav>
+            <a class="navlink" href="contact.html">Contact</a>
+            <!-- <a class="navlink" href="#">About</a> -->
+        </nav>
         <h1 id="herocopy">Helping Hands For All Creatures Great And Small</h1>
     </section>
 
