--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <section id="hero2">
         <nav>
             <a class="navlink" href="index.html">Home</a>
-            <!-- <a href="">contact</a> -->
+            <!-- <a class="navlink" href="#">About</a> -->
         </nav>
         <h1 id="herocopy">Contact Us</h1>
     </section>
