Edits to contact form styles and general css.

--- a/contact.html
+++ b/contact.html
@@ -29,13 +29,6 @@
 
     <section id="main">
 
-        <!-- <section class="card">
-            <img id="logo" src="https://i.ibb.co/FnhcQnv/helping-hands-placeholder-sm.png" alt="">
-            <p>
-                We are currently in the process of obtaining our 501(c)(3) status.
-            </p>
-        </section> -->
-
         <section class="content cform">
             <div class="container">
                 <p>We'd love to hear from you. You can either email us at the address below, or fill out the form and submit.</p>
@@ -65,6 +58,8 @@
 
         <section class="content footer">
             <p class="legal">Copyright © 2021 Helping Hands For All Creatures Great And Small, Inc. All rights reserved.</p>
+            <p class="legal credit"><span>Photo by <a href="https://unsplash.com/@editholic7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="noopener">Kunal Shinde</a> on <a href="https://unsplash.com" target="_blank" rel="noopener">Unsplash</a></span>
+            </p>
         </section>
 
     </section>
