Added the logo placeholder and changed the url from imgbb to local directory.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="main">
 
         <section class="card">
-            <img id="logo" src="https://i.ibb.co/FnhcQnv/helping-hands-placeholder-sm.png" alt="">
+            <img id="logo" src="media/helping-hands-placeholder-sm.png" alt="">
             <p>Be a part of something big! Donate and get involved.</p>
             <a class="btn" target="_blank" rel="noopener"><button>Donate</button></a>
         </section>
