Updated contact page home link.

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
     <section id="hero2">
         <nav>
-            <a class="navlink" href="index.html">Home</a>
+            <a class="navlink" href="/">Home</a>
             <!-- <a class="navlink" href="#">About</a> -->
         </nav>
         <h1 id="herocopy">Contact Us</h1>
