Updated thank you page home href to /.

--- a/thank-you.html
+++ b/thank-you.html
@@ -94,7 +94,7 @@
 
 <body>
     <nav>
-        <a class="navlink" href="index.html">Home</a>
+        <a class="navlink" href="/">Home</a>
     </nav>
     <section>
         <img id="thanksimg" src="media/email-form-thank-you-01.png" alt="Thank you for your submission!">
