--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                     <input type="text" id="name" name="full_name" placeholder="Full Name" required>
 
                     <label for="email">Email</label>
-                    <input type="text" id="email" name="email" placeholder="Email" required>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
 
                     <label for="message">Message</label>
                     <textarea id="message" name="message" placeholder="Write your message here." style="height:200px"></textarea>
@@ -49,7 +49,7 @@
                     <input type="hidden" name="_next" value="https://www.helpinghandsforall.org/thank-you.html">
                     <input type="text" name="_honey" style="display:none">
                     <input type="hidden" name="_captcha" value="false">
-
+                    <!-- Form by https://formsubmit.co -->
                 </form>
             </div>
 
