--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                     <input type="text" id="name" name="full_name" placeholder="Full Name" required>
 
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <input type="text" id="email" name="email" placeholder="Email" required>
 
                     <label for="message">Message</label>
                     <textarea id="message" name="message" placeholder="Write your message here." style="height:200px"></textarea>
