Edit to contact intro.

--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,7 @@
 
         <section class="content cform">
             <div class="container">
-                <p>We'd love to hear from you. You can either email us at the address below, or fill out the form and submit.</p>
-                <p><b>serve@helpinghandsforall.org</b></p>
+                <p>We'd love to hear from you. You can either email us at <strong>serve@helpinghandsforall.org</strong>, or fill out the form below and submit.</p>
                 <br><br>
                 <form action="https://formsubmit.co/serve@helpinghandsforall.org" method="POST">
 
