--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
         <section class="content cform">
             <div class="container">
-                <p>We'd love to hear from you. You can either email us at <strong>serve@helpinghandsforall.org</strong>, or fill out the form below and submit.</p>
+                <p>We'd love to hear from you. You can either email us at <em>serve@helpinghandsforall.org</em>, or fill out the form below and submit.</p>
                 <br><br>
                 <form action="https://formsubmit.co/serve@helpinghandsforall.org" method="POST">
 
