--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 
                     <input type="text" name="_honey" style="display:none">
 
-                    <input type="hidden" name="_captcha" value="false">
+                    <!-- <input type="hidden" name="_captcha" value="false"> -->
                     <!-- Form by https://formsubmit.co -->
                 </form>
             </div>
