Added vision and mission statements, and what we do heading.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
             <a class="btn" target="_blank" rel="noopener"><button>Donate</button></a>
         </section>
 
+        <div class="content">
+            <h1>Vision</h1>
+            <p>Awaken the world to the reality of GOD and HIS KINGDOM by being HIS loving hands and heart, which will serve people, animals, and nature.</p>
+        </div>
+        <div class="content">
+            <h1>Mission</h1>
+            <p>We are GOD directed and we will glorify HIM by serving. We are here to create real transformation of the heart by fulfilling HIS will, expressed through love, compassion, and good works. In practice, this will be carried out by helping people
+                in need, helping animals in need, and helping nature in need. We are here to encourage and lift up HIS Children so they can realize their full potential. We need to renew the Spiritual connections to each other, animals, and nature that
+                have been severed by modern life. We do this, because we love HIM.
+            </p>
+        </div>
         <section class="content">
+            <h1>What We Do</h1>
             <p>We are <strong>Helping Hands For All Creatures Great And Small</strong>; a GOD directed nonprofit that is here to create real transformation of the heart. Our organization has a simple goal; to help people, animals, and nature in need. On
                 a global scale. This will be accomplished by working directly with individuals and collaborating with other nonprofits to accomplish amazing things.</p>
 
