Edits to status docs.

--- a/status.html
+++ b/status.html
@@ -46,7 +46,7 @@
 
         <h1>Questions</h1>
         <p>
-            We are a charitable organization, but are we educational too? Maybe what the IRS defines as educational isn't the same as what we think it is.
+            We can operate and even accept donations without tax exempt status. This means we have to opperate via the State of Florida. What does operating and taking donations without tax exemption look like? It's something I'm currently researching.
         </p>
         <p>We will help other nonprofits with funding, as well as collaborate, and assist. How does this affect how we fill out Form 1023?</p>
     </section>
