--- a/status.html
+++ b/status.html
@@ -11,6 +11,7 @@
 
 <body>
     <section class="container">
+        <p><a href="index.html">Home</a></p>
         <p>Last update: Feb 10, 2022</p>
         <p>The information below are things that I'm working on, questions I have, and so forth.</p>
         <h1>Nonprofit To Dos</h1>
@@ -48,7 +49,7 @@
         <p>
             We can operate and even accept donations without tax exempt status. This means we have to opperate via the State of Florida. What does operating and taking donations without tax exemption look like? It's something I'm currently researching.
         </p>
-        <p>We will help other nonprofits with funding, as well as collaborate, and assist. How does this affect how we fill out Form 1023?</p>
+        <p>We will help other nonprofits with fundraising, as well as collaborate, and assist. How does this affect how we fill out Form 1023?</p>
     </section>
 </body>
 
