Edits to status docs.

--- a/status.html
+++ b/status.html
@@ -11,8 +11,8 @@
 
 <body>
     <section class="container">
-        <p><a href="index.html">Home</a></p>
         <p>Last update: Feb 10, 2022</p>
+        <p><a href="index.html">Home</a></p>
         <p>The information below are things that I'm working on, questions I have, and so forth.</p>
         <h1>Nonprofit To Dos</h1>
         <ul>
@@ -49,7 +49,10 @@
         <p>
             We can operate and even accept donations without tax exempt status. This means we have to opperate via the State of Florida. What does operating and taking donations without tax exemption look like? It's something I'm currently researching.
         </p>
-        <p>We will help other nonprofits with fundraising, as well as collaborate, and assist. How does this affect how we fill out Form 1023?</p>
+        <p>We will help other nonprofits with fundraising, as well as collaborate, and assist. How does this affect us from an IRS standpoint? I noticed some language in Form 1023 that seems to ask about giving money</p>
+
+        <p>The IRS asks if we'll be "publishing" things such as artwork. I was thinking of selling merchandise in order to help raise funds. How do we present this? Do we have to decide the exact business model for this now? For example, will we sell merch
+            only created by me? Or will we ask local artist to donate work for us?</p>
     </section>
 </body>
 
