--- a/status.html
+++ b/status.html
@@ -49,7 +49,11 @@
 
         <h1>Questions</h1>
         <p>
-            We can operate and even accept donations without tax exempt status. This means we have to opperate via the State of Florida. What does operating and taking donations without tax exemption look like? It's something I'm currently researching.
+            We can <a href="https://learning.candid.org/resources/knowledge-base/fundraising-during-the-incorporation-process/">operate and even accept donations without tax exempt status</a>.
+            <ul>
+                <li>This means we have to opperate via the State of Florida. What does operating and taking donations without tax exemption look like? It's something I'm currently researching.</li>
+                <li>We can also accept tax exempt donations, if we choose <a href="https://learning.candid.org/resources/knowledge-base/fiscal-sponsorship/">fiscal sponsorship</a>.</li>
+            </ul>
         </p>
         <p>We will help other nonprofits with fundraising, as well as collaborate, and assist. How does this affect us from an IRS standpoint? I noticed some language in Form 1023 that seems to ask about giving money</p>
 
