Edits to content.

--- a/status.html
+++ b/status.html
@@ -47,6 +47,7 @@
                 <li>We need a system.</li>
                 <li>Keep it as simple as possible.</li>
             </ul>
+            <li>We need low key ideas for fundraising.</li>
         </ul>
 
         <h1>Questions</h1>
