--- a/status.html
+++ b/status.html
@@ -22,7 +22,12 @@
             <li class="sans"><input class="chk" type="checkbox" checked> <label>Nonprofit status</label></li>
             <li class="sans"><input class="chk" type="checkbox" checked> <label>EIN</label></li>
             <li class="sans"><input class="chk" type="checkbox" checked> <label>Opened bank account</label></li>
-            <li class="sans"><input class="chk" type="checkbox"> <label><span class="red">Submit first annual report by May 1st</span></label></li>
+            <li class="sans"><input class="chk" type="checkbox"> <label><span class="red">Submit first annual report by May 1st</span></label>
+                <ul>
+                    <li>This is something our registered agent may be able to do.</li>
+                </ul>
+            </li>
+
             <li class="sans">
                 <input class="chk" type="checkbox" onclick="myFunction()"> <label><span class="yellow">Tax exemption • 3/1/22 check-in // <em>In Progress</em></span></label>
             </li>
@@ -33,14 +38,16 @@
 
 
         <ul>
-            <li class="sans"> <input type="checkbox"> Organizing document(?)</li>
-            <ul>
-                <li>I think these are the Articles of Incorporation.</li>
-                <li>This is in Part III of Form 1023.</li>
-                <li>Articles of Incorporation include the type (charitable org), purpose, and dissolution provisions.</li>
-                <li><span class="yellow">May have to amend in order to increase chance of approval. Are there implications for this?. Registered Agent might be able to help.</span></li>
-                <li>Must have IRS approved language in Articles of Incorporation.</li>
-            </ul>
+            <li class="sans"> <input type="checkbox"> Organizing document(?)
+                <ul>
+                    <li>I think these are the Articles of Incorporation.</li>
+                    <li>This is in Part III of Form 1023.</li>
+                    <li>Articles of Incorporation include the type (charitable org), purpose, and dissolution provisions.</li>
+                    <li><span class="yellow">May have to amend in order to increase chance of approval. Are there implications for this?. Registered Agent might be able to help.</span></li>
+                    <li>Must have IRS approved language in Articles of Incorporation.</li>
+                </ul>
+            </li>
+
         </ul>
         <h1>Miscellanea</h1>
         <ul>
