--- a/status.html
+++ b/status.html
@@ -64,13 +64,13 @@
             We can <a href="https://learning.candid.org/resources/knowledge-base/fundraising-during-the-incorporation-process/">operate and even accept donations without tax exempt status</a>.
             <ul>
                 <li>This means we have to opperate via the State of Florida. What does operating and taking donations without tax exemption look like? It's something I'm currently researching.</li>
-                <li>We can also accept tax exempt donations, if we choose <a href="https://learning.candid.org/resources/knowledge-base/fiscal-sponsorship/">fiscal sponsorship</a>.</li>
+                <li>We can also accept tax exempt donations, if we choose <a href="https://learning.candid.org/resources/knowledge-base/fiscal-sponsorship/">fiscal sponsorship</a>. It's something to pray about.</li>
             </ul>
         </p>
-        <p>We will help other nonprofits with fundraising, as well as collaborate, and assist. How does this affect us from an IRS standpoint? I noticed some language in Form 1023 that seems to ask about giving money</p>
+        <p>We will help other nonprofits with fundraising, as well as collaborate, and assist. How does this affect us from an IRS standpoint? I noticed some language in Form 1023 that seems to ask about giving money.</p>
 
         <p>The IRS asks if we'll be "publishing" things such as artwork. I was thinking of selling merchandise in order to help raise funds. How do we present this? Do we have to decide the exact business model for this now? For example, will we sell merch
-            only created by me? Or will we ask local artist to donate work for us?</p>
+            only created by me? Or will we ask local artists to donate work for us?</p>
 
     </section>
     <script>
