Edits to What We Do.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="content">
             <h1>What We Do</h1>
             <p>We are <strong>Helping Hands For All Creatures Great And Small</strong>; a GOD directed nonprofit that is here to create real transformation of the heart. Our organization has a simple goal; to help people, animals, and nature in need. On
-                a global scale. This will be accomplished by working directly with individuals and collaborating with other nonprofits to accomplish amazing things.</p>
+                a global scale. This will be achieved by working directly with individuals and collaborating with other nonprofits to accomplish amazing things.</p>
 
             <p>It may sound like too big a task, but this is coming from the only ONE who can make anything happen. GOD HIMSELF! </p>
 
