--- a/status.html
+++ b/status.html
@@ -11,9 +11,10 @@
 
 <body>
     <section class="container">
-        <p>Last update: Feb 17, 2022</p>
+        <p>Last update: Feb 24, 2022</p>
         <p><a href="index.html">Home</a></p>
         <p>The information below are things that I'm working on, questions I have, and so forth.</p>
+        <blockquote>Alisha had surgery on Tue 2/22/22. It's added another layer of difficulty, but I'm rolling with it.</blockquote>
         <h1>Nonprofit To Dos</h1>
         <ul>
             <li class="sans"><input id="accept" name="accept" type="checkbox" checked> <label for="accept">Obtained business name</label></li>
