Edits to details.

--- a/details.html
+++ b/details.html
@@ -60,7 +60,7 @@
 
         <h1>Budget (incomplete)</h1>
         <p>Our hope is to be a global organization, which is why an initial operational budget of $500,000 is our goal.</p>
-        <p>Our revenue will consist of:</p>
+        <p><strong>Our revenue will consist of:</strong></p>
         <ul>
             <li>Donations</li>
             <li>Earned income</li>
@@ -69,7 +69,7 @@
         </ul>
 
 
-        <p>Operational Costs</p>
+        <p><strong>Operational Costs</strong></p>
         <ul>
             <li>People in need program: $100,000</li>
             <li>Animals in need program: $100,000</li>
