Edits to details.

--- a/details.html
+++ b/details.html
@@ -79,11 +79,10 @@
 
 
         <h1>Board of Directors</h1>
-        <dl>
-            <dt>Alisha M. Fredrickson, founder/program director</dt>
-            <dt>Tim Pipkorn, financial director</dt>
-            <dt>Frank J. Quinones, founder/ceo</dt>
-        </dl>
+
+        <p>
+            Alisha M. Fredrickson, founder/program director<br> Tim Pipkorn, financial director<br> Frank J. Quinones, founder/ceo
+        </p>
     </section>
 
 
