Edits to details.

--- a/details.html
+++ b/details.html
@@ -31,7 +31,7 @@
         <p>We will follow the need. First we address situational circumstances such as lack of housing and food, drug addiction, orphaned children; neglected and abused animals, environmental issues, etc by providing the necessary resources. Then, we will
             address issues of the heart in order to ignite the hope and love of JESUS CHRIST.</p>
         <h1>Activities & Programs</h1>
-        <p><strong>People in need program</strong></p>
+        <h3>People in need program</h3>
         <ul>
             <li>Homeless families</li>
             <li>Drug addiction</li>
@@ -40,7 +40,7 @@
             <li>Lack of food</li>
             <li>Resources for success</li>
         </ul>
-        <p><strong>Animals in need program</strong></p>
+        <h3>Animals in need program</h3>
         <ul>
             <li>We will have an animal rescue to help animals that have been abused, neglected, or displaced.</li>
             <li>We will rehabilitate horses and other livestock, dogs, cats, and even wild animals.</li>
@@ -48,7 +48,7 @@
             <li>Rehab and release wild animals back into the wild.</li>
         </ul>
 
-        <p><strong>Nature in need program</strong></p>
+        <h3>Nature in need program</h3>
         <ul>
             <li>Clean up beaches, public areas, and communities.</li>
             <li>Clean up and also address issues with wildlife.</li>
@@ -60,7 +60,7 @@
 
         <h1>Budget (incomplete)</h1>
         <p>Our hope is to be a global organization, which is why an initial operational budget of $500,000 is our goal.</p>
-        <p><strong>Our revenue will consist of:</strong></p>
+        <h3>Our revenue will consist of:</h3>
         <ul>
             <li>Donations</li>
             <li>Earned income</li>
@@ -69,7 +69,7 @@
         </ul>
 
 
-        <p><strong>Operational Costs</strong></p>
+        <h3>Operational Costs</h3>
         <ul>
             <li>People in need program: $100,000</li>
             <li>Animals in need program: $100,000</li>
