Edits to details.

--- a/details.html
+++ b/details.html
@@ -28,7 +28,7 @@
 
         <p>Studies have shown (cite studies) that interaction with animals and immersing ourselves in nature provides genuine health benefits.</p>
         <h1>Population Served </h1>
-        <p>We will follow the need. First we seek and address situational circumstances such as lack of housing and food, drug addiction, orphaned children; neglected and abused animals, environmental issues, etc by providing the necessary resources. Then,
+        <p>We will follow the need. First we seek and address situational circumstances such as lack of housing and food, drug addiction, orphaned children; neglected and abused animals, environmental issues, etc, by providing the necessary resources. Then,
             we will address issues of the heart in order to ignite the hope and love of JESUS CHRIST.</p>
         <h1>Activities & Programs</h1>
         <h3>People in need program</h3>
