Edits to details.

--- a/details.html
+++ b/details.html
@@ -43,7 +43,7 @@
         <h3>Animals in need program</h3>
         <ul>
             <li>We will have an animal rescue to help those that have been abused, neglected, or displaced.</li>
-            <li>We will rehabilitate horses and other livestock; dogs, cats, and even wild animals.</li>
+            <li>We will rehabilitate horses and other livestock; dogs, cats, and even wild animals (either at our facility or partner facilities).</li>
             <li>Find loving homes for domesticated animals.</li>
             <li>Rehab and release wild animals back into the wild.</li>
         </ul>
