Edits to details.

--- a/details.html
+++ b/details.html
@@ -51,8 +51,8 @@
         <h3>Nature in need program</h3>
         <ul>
             <li>Clean up beaches, public areas, and communities.</li>
-            <li>Clean up and also address issues with wildlife.</li>
-            <li>Address environmental issues by collaborating with innovative individuals and organizations that will create meaningful and significant change.</li>
+            <li>Clean up and also address specific environmental areas.</li>
+            <li>Address specific environmental issues by collaborating with innovative individuals and organizations that will create meaningful and significant change.</li>
         </ul>
 
         <p>We will also partner and collaborate with other nonprofits that are doing GOD's work. Collaboration over competition. We need to step forward as a united body, together, in order to create real meaningful change and transformation of the heart.</p>
@@ -60,7 +60,7 @@
 
         <h1>Budget (incomplete)</h1>
         <p>Our hope is to be a global organization, which is why an initial operational budget of $500,000 is our goal.</p>
-        <h3>Our revenue will consist of:</h3>
+        <h3>Our revenue will consist of</h3>
         <ul>
             <li>Donations</li>
             <li>Earned income</li>
@@ -81,7 +81,7 @@
         <h1>Board of Directors</h1>
 
         <p>
-            Alisha M. Fredrickson, founder/program director<br> Tim Pipkorn, financial director<br> Frank J. Quinones, founder/ceo
+            Alisha M. Fredrickson,<br> founder/program director<br><br> Tim Pipkorn,<br> financial director<br><br> Frank J. Quinones,<br> founder/ceo
         </p>
     </section>
 
