Edits to details.

--- a/details.html
+++ b/details.html
@@ -80,9 +80,9 @@
 
         <h1>Board of Directors</h1>
 
-        <p>
-            Alisha M. Fredrickson,<br> founder/program director<br><br> Tim Pipkorn,<br> financial director<br><br> Frank J. Quinones,<br> founder/ceo
-        </p>
+        <p>Alisha M. Fredrickson,<br>Program Director</p>
+        <p>Timothy G. Pipkorn,<br>Financial Director</p>
+        <p>Frank J. Quinones,<br>CEO</p>
     </section>
 
 
