--- a/details.html
+++ b/details.html
@@ -69,13 +69,57 @@
         </ul>
 
 
-        <h3>Operational Costs</h3>
+        <!-- <h3>Program Costs</h3>
         <ul>
             <li>People in need program: $100,000</li>
             <li>Animals in need program: $100,000</li>
             <li>Nature in need program: $100,000</li>
-            <li>Compensation and operational expenses: $100,000</li>
         </ul>
+
+        <h3>Compensation & General Operational Costs</h3>
+        <p>Compensation: $50,000</p>
+        <p>Legal fees, office supplies, marketing, travel, insurance, etc: $50,000</p> -->
+
+        <h3>Program &amp; Operational Costs</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Item</th>
+                    <th>Cost</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>People in need program</td>
+                    <td>$100,000</td>
+                </tr>
+                <tr>
+                    <td>Animals in need program</td>
+                    <td>$100,000</td>
+                </tr>
+                <tr>
+                    <td>Nature in need program</td>
+                    <td>$100,000</td>
+                </tr>
+                <tr>
+                    <td>Compensation (CEO)</td>
+                    <td>$50,000</td>
+                </tr>
+                <tr>
+                    <td>Legal fees, marketing, travel, food/bev, print collateral, IT, equipment, etc.</td>
+                    <td>$50,000</td>
+                </tr>
+                <tr>
+                    <td>Excess (or deficit) for the year</td>
+                    <td>$100,000</td>
+                </tr>
+                <tr>
+                    <td class="total">Total</td>
+                    <td class="total">$500,000</td>
+                </tr>
+            </tbody>
+        </table>
+
 
 
         <h1>Board of Directors</h1>
