Edits to details.

--- a/details.html
+++ b/details.html
@@ -31,7 +31,7 @@
         <p>We will follow the need. First we seek and address situational circumstances such as lack of housing and food, drug addiction, orphaned children; neglected and abused animals, environmental issues, etc, by providing the necessary resources. Then,
             we will address issues of the heart in order to ignite the hope and love of JESUS CHRIST.</p>
         <h1>Activities & Programs</h1>
-        <h3>People in need program</h3>
+        <h3>People in Need Program</h3>
         <ul>
             <li>Homeless families</li>
             <li>Drug addiction</li>
@@ -58,9 +58,9 @@
         <p>We will also partner and collaborate with other nonprofits that are doing GOD's work. Collaboration over competition. We need to step forward as a united body, together, in order to create real meaningful change and transformation of the heart.</p>
 
 
-        <h1>Budget (incomplete)</h1>
-        <p>Our hope is to be a global organization, which is why an initial operational budget of $500,000 is our goal.</p>
-        <h3>Our revenue will consist of</h3>
+        <h1>Budget</h1>
+        <p>Our goal is to be a global organization, hence the initial operational budget of $500,000.</p>
+        <h3>Revenue Streams</h3>
         <ul>
             <li>Donations</li>
             <li>Earned income</li>
