Edits to details.html

--- a/details.html
+++ b/details.html
@@ -59,7 +59,7 @@
 
 
         <h1>Budget</h1>
-        <p>Our goal is to be a global organization, hence the initial operational budget of $500,000.</p>
+        <p>The goal is to become a global organization, hence the initial operational budget of $500,000. Our fiscal year ends June 30th.</p>
         <h3>Revenue Streams</h3>
         <ul>
             <li>Donations</li>
