Edits to formation.html.

--- a/formation.html
+++ b/formation.html
@@ -27,9 +27,10 @@
         <ul>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Create organization by-laws</li>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Complete Form 1023 and Narrative of Activities</li>
+                <li class="sans"><input class="checkbox" type="checkbox"> <label>Obtain IRS approval of 501(c)3 tax-exempt status (Expedite approval)</li>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Create Compensation and Conflict of Interest Policies</li>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Review bylaws to ensure inclusion of Dissolution and Charitable Contributions clauses</li>
-            <li class="sans"><input class="checkbox" type="checkbox"> <label>Obtain IRS approval of 501(c)3 tax-exempt status</li>
+            <li class="sans"><input class="checkbox" type="checkbox"> <label>Register with state to obtain approval for Solicitation of Contributions</li>
             <li class="sans"><input class="checkbox" type="checkbox"> <label>Handle all documents and correspondence with State and Federal agencies</li>
         </ul>
 
